format tests + add some fixes suggested by intellij